--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,16 +1,25 @@
 {
   "dependencies": {
-    "com.unity.ads": "2.0.8",
-    "com.unity.analytics": "3.2.2",
-    "com.unity.burst": "0.2.4-preview.41",
-    "com.unity.collab-proxy": "1.2.15",
+    "com.unity.2d.sprite": "1.0.0",
+    "com.unity.2d.tilemap": "1.0.0",
+    "com.unity.ads": "3.4.4",
+    "com.unity.analytics": "3.3.5",
+    "com.unity.burst": "1.1.1",
+    "com.unity.collab-proxy": "1.2.16",
     "com.unity.collections": "0.0.9-preview.11",
+    "com.unity.ide.rider": "1.1.4",
+    "com.unity.ide.vscode": "1.2.0",
     "com.unity.jobs": "0.0.7-preview.6",
-    "com.unity.mathematics": "0.0.12-preview.19",
-    "com.unity.package-manager-ui": "2.0.3",
-    "com.unity.purchasing": "2.0.3",
-    "com.unity.textmeshpro": "1.3.0",
+    "com.unity.mathematics": "1.1.0",
+    "com.unity.multiplayer-hlapi": "1.0.4",
+    "com.unity.purchasing": "2.0.6",
+    "com.unity.test-framework": "1.1.13",
+    "com.unity.textmeshpro": "2.0.1",
+    "com.unity.timeline": "1.2.6",
+    "com.unity.ugui": "1.0.0",
+    "com.unity.xr.legacyinputhelpers": "2.1.3",
     "com.unity.modules.ai": "1.0.0",
+    "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
     "com.unity.modules.assetbundle": "1.0.0",
     "com.unity.modules.audio": "1.0.0",
