--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,23 +1,16 @@
 {
   "dependencies": {
-    "com.unity.2d.sprite": "1.0.0",
-    "com.unity.2d.tilemap": "1.0.0",
-    "com.unity.ads": "3.4.4",
-    "com.unity.analytics": "3.3.5",
-    "com.unity.burst": "1.1.1",
+    "com.unity.burst": "1.3.0-preview.12",
     "com.unity.collab-proxy": "1.2.16",
-    "com.unity.collections": "0.0.9-preview.11",
+    "com.unity.collections": "0.8.0-preview.5",
     "com.unity.ide.rider": "1.1.4",
     "com.unity.ide.vscode": "1.2.0",
-    "com.unity.jobs": "0.0.7-preview.6",
-    "com.unity.mathematics": "1.1.0",
-    "com.unity.multiplayer-hlapi": "1.0.4",
-    "com.unity.purchasing": "2.0.6",
-    "com.unity.test-framework": "1.1.13",
+    "com.unity.jobs": "0.2.9-preview.15",
+    "com.unity.test-framework": "1.1.14",
+    "com.unity.test-framework.performance": "2.0.9-preview",
     "com.unity.textmeshpro": "2.0.1",
-    "com.unity.timeline": "1.2.6",
+    "com.unity.timeline": "1.2.14",
     "com.unity.ugui": "1.0.0",
-    "com.unity.xr.legacyinputhelpers": "2.1.3",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
